--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,15 +12,12 @@ source:
 build:
   noarch: python
   number: 0
-  script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
+  build:
   host:
-    - python >=3.6
-    - pip
   run:
-    - python >=3.6
-    - notebook
+    - jupyterlab_latex
 
 test:
   imports:
