--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,7 @@ requirements:
     - pip
     - hatchling
     - hatch-nodejs-version
+    - hatch-jupyter-builder
   run:
     - python >=3.8
     - jupyterlab >=4,<5
